vlib/v/checker/tests/array_method_call_immutable_err.out
vlib/v/checker/tests/array_method_call_immutable_err.vv:7:2: error: `a2` is immutable, declare it with `mut` to make it mutable
    5 |     a3 := ['aa', 'bb']
    6 | 
    7 |     a2.prepend(a1)
      |     ~~
    8 |     a1.insert(0, a0)
    9 |     a3.sort_with_compare(fn (a &string, b &string) int {
vlib/v/checker/tests/array_method_call_immutable_err.vv:8:2: error: `a1` is immutable, declare it with `mut` to make it mutable
    6 | 
    7 |     a2.prepend(a1)
    8 |     a1.insert(0, a0)
      |     ~~
    9 |     a3.sort_with_compare(fn (a &string, b &string) int {
   10 |         if a < b {
vlib/v/checker/tests/array_method_call_immutable_err.vv:9:2: error: `a3` is immutable, declare it with `mut` to make it mutable
    7 |     a2.prepend(a1)
    8 |     a1.insert(0, a0)
    9 |     a3.sort_with_compare(fn (a &string, b &string) int {
      |     ~~
   10 |         if a < b {
   11 |             return -1
vlib/v/checker/tests/array_method_call_immutable_err.vv:18:2: error: `a3` is immutable, declare it with `mut` to make it mutable
   16 |         return 0
   17 |     })
   18 |     a3.delete(0)
      |     ~~
   19 |     a2.pop()
   20 |     a3.sort()
vlib/v/checker/tests/array_method_call_immutable_err.vv:19:2: error: `a2` is immutable, declare it with `mut` to make it mutable
   17 |     })
   18 |     a3.delete(0)
   19 |     a2.pop()
      |     ~~
   20 |     a3.sort()
   21 |
vlib/v/checker/tests/array_method_call_immutable_err.vv:20:2: error: `a3` is immutable, declare it with `mut` to make it mutable
   18 |     a3.delete(0)
   19 |     a2.pop()
   20 |     a3.sort()
      |     ~~
   21 | 
   22 |     b0 := ['aa', 'bb']!
vlib/v/checker/tests/array_method_call_immutable_err.vv:23:2: error: `b0` is immutable, declare it with `mut` to make it mutable
   21 | 
   22 |     b0 := ['aa', 'bb']!
   23 |     b0.sort_with_compare(fn (a &string, b &string) int {
      |     ~~
   24 |         if a < b {
   25 |             return -1
vlib/v/checker/tests/array_method_call_immutable_err.vv:32:2: error: `b0` is immutable, declare it with `mut` to make it mutable
   30 |         return 0
   31 |     })
   32 |     b0.sort()
      |     ~~
   33 | }
